# Chip8emu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: win-build.bat
source/: CMakeLists.txt  C_Chip8.cpp  C_Chip8.h  main.cpp
